<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:title="@string/view"
        android:id="@+id/idSetting">
        <menu>
            <item android:title="@string/list"
                android:id="@+id/idList">

            </item>
            <item android:title="@string/grid"
                android:id="@+id/idGrid">

            </item>
        </menu>

    </item>
    <item android:title="@string/theme"
        android:id="@+id/idTheme">
        <menu>
            <item android:title="@string/Dark"
                android:id="@+id/idDarkTheme">

            </item>
            <item android:title="@string/light"
                android:id="@+id/idLightTheme">

            </item>

        </menu>
    </item>
   <item
       android:id="@+id/idSearch"
       android:title="Search"
       android:icon="@drawable/ic_search"
       app:showAsAction="ifRoom"
       app:actionViewClass="androidx.appcompat.widget.SearchView">

   </item>
</menu>